--- a/pacman/src/App.css
+++ b/pacman/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", "lucida grande", "Segoe UI", arial, verdana,
+    "lucida sans unicode", tahoma, sans-serif;
+  background: #2b2b2b;
+  color: #fff;
+  position: relative;
+  width: 600px;
+  /*   perspective: 1000px; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#maze {
+  z-index: 2000;
+  position: absolute;
+  top: 10px;
+  left: 80px;
+  transform: rotateX(30deg);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+#maze2 {
+  z-index: -1;
+  position: absolute;
+  top: 25px;
+  left: 80px;
+  opacity: 0.2;
+  transform: rotateX(30deg);
+}
+
+@keyframes animate-maze {
+  0% {
+    fill: blue;
+  }
+  25% {
+    fill: red;
+  }
+  50% {
+    fill: yellow;
+  }
+  75% {
+    fill: green;
+  }
+  100% {
+    fill: blue;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.game {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.game:focus {
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.player {
+  z-index: 100;
+  height: 20px;
+  width: 20px;
+  display: inline-block;
+  position: absolute;
+  background-image: url("");
+  background: url("http://math.ucr.edu/home/baez/mathematical/cube.png") center
+    center no-repeat;
+  background-size: cover;
+  /*   transition: all 200ms linear; */
+}
+
+.board {
+  margin: 0 auto;
+  position: relative;
+  position: absolute;
+  top: 20px;
+  left: 80px;
+  width: 560px;
+  transform: rotateX(30deg);
+}
+
+.row {
+  line-height: 0;
+}
+
+.square {
+  /*   border-top: solid 1px #000;
+  border-right: solid 1px #000; */
+  height: 20px;
+  width: 20px;
+  display: inline-block;
+}
+
+.square.wall {
+  background: transparent;
+}
+
+.square.dot {
+  background: #e8da5a;
+  border-radius: 50%;
+  height: 5px;
+  width: 5px;
+  margin: 7.5px;
+  box-shadow: 0px 5px 5px #1d1c1c;
 }
